z-index fix

--- a/Client/src/app/content/notes/full-note-components/html-components/html-text-part/html-text-part.component.scss
+++ b/Client/src/app/content/notes/full-note-components/html-components/html-text-part/html-text-part.component.scss
@@ -1,24 +1,31 @@
 @import 'innerNote';
 
-.no-content{
-    p{
-        margin-left: 3px;
-    }
-    margin-top: 2px;
-    width: 100%;
-    position: absolute;
+.no-content {
+  margin-top: 2px;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  color: #6B6B6B;
+  font-weight: 300;
+
+  p {
+    margin-left: 3px;
+  }
+
+  .buttons {
+    z-index: 3;
+    margin-right: 20px;
     display: flex;
-    justify-content: space-between;
-    color: #6B6B6B;               
-    font-weight: 300;
-    .buttons{
-        z-index: 3;
-        margin-right: 20px;
-        display: flex;
-        align-items: center;
-        i {
-            cursor: pointer;
-            margin-left: 10px;
-        }
+    align-items: center;
+
+    i {
+      cursor: pointer;
+      margin-left: 10px;
     }
+
+    i::before {
+      font-size: 1.25rem;
+    }
+  }
 }
