--- a/Client/src/app/content/notes/full-note/full-note.component.scss
+++ b/Client/src/app/content/notes/full-note/full-note.component.scss
@@ -5,6 +5,8 @@
   flex-direction: row;
 
   .wrapper {
+    position: relative;
+    z-index: 1;
     display: flex;
     height: 100%;
     width: 100%;
@@ -225,6 +227,6 @@
 }
 
 app-text-edit-menu {
-  z-index: 20;
+  z-index: 2;
   position: absolute;
 }
