--- a/Client/src/app/content/notes/text-edit-menu/text-edit-menu.component.scss
+++ b/Client/src/app/content/notes/text-edit-menu/text-edit-menu.component.scss
@@ -13,4 +13,7 @@
         margin-left: 7px;
         margin-right: 7px;
     }
+    i::before{
+        font-size: 1.25rem;
+    }
 }
